fix: ajustes nos métodos de teste unitários.